Adicionando uma seção 'Participantes', com referência para videos dos participantes

--- a/index.html
+++ b/index.html
@@ -63,24 +63,33 @@
       <h1 id="net_pb">.Net_PB</h1>
       <blockquote>
         <p>A comunidade .NET_PB é um hub de pessoas que de alguma maneira curtem a tecnologia .NET(afinidade comum) e seu ecosistema
-          <BR>Seu foco principal é promover o networking e a troca de conhecimento.</p>
+          <BR>Seu foco principal é promover o networking e a troca de conhecimento.<BR>
 
-        <a href="/timeline.html">Timeline</a>
+        Próximo evento? Verifique na <a href="/timeline.html">Timeline</a>        
         </p>
       </blockquote>
 
       <p>Quer conhecer mais sobre a plataforma .NET e outras assuntos? Seja você também um membro da comunidade .Net_PB, veja
-        como:</p>
+        como mais abaixo.</p>
 
       <ol>
-        <li>Obtenha acesso ao slack do GrudePB
-          <code class="highlighter-rouge">*</code> via https://grudepb.herokuapp.com/</li>
+        <li>Obtenha acesso ao slack do GrudePB* via https://grudepb.herokuapp.com/</li>
         <li>Acesse o slack do GrudePB</li>
         <li>Entre no canal #dot-net</li>
       </ol>
 
+      <h1 id="net_pb">Participantes</h1>
+        <p>Alguns dos nossos participantes toparam fazer um pequeno video de apresentação, conheça eles acessando os links do youtube abaixo. Queremos ver o seu também em breve.
+          <BR>
+            <ul>
+                <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9an2bOrHi4107cJCANBnVbxs"  target="_blank">Get to know .NET_PB people, 1a temporada</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9amgJZ0nXGAHFfcGr8UKxvR2"  target="_blank">Get to know .NET_PB people, 2a temporada</a></li>
+              </ul>          
+        </p>
+
+
       <h1 id="grupo-de-desenvolvedores-da-paraíba---grudepb">
-        <em>Grupo de Desenvolvedores da Paraíba</em> - GrudePB</h1>
+        <em>*Grupo de Desenvolvedores da Paraíba</em> - GrudePB</h1>
 
       <blockquote>
         <p>Site do GrudePB - Grupo de Desenvolvedores da Paraíba
