--- a/timeline.html
+++ b/timeline.html
@@ -80,7 +80,7 @@
             
             <p>
               Restam <i><b id="temporizador"></b> </i> para este evento ocorrer.<BR>
-              Dessa vez que acolherá a comunidade será a 
+              Dessa vez quem acolherá a comunidade será a 
               <a href="https://www.fpb.edu.br/" target="_blank">
                 FPB
               </a>.<BR>
@@ -126,7 +126,7 @@
             <h2>1o Meetup da comunidade .NET_PB</h2>
             <p>Realizado na <a href="http://www.estacio.br/" target="_blank">Faculdade Estácio da Paraíba</a>.</p>
             <img src="img/1omeetupcollage.jpg">
-            <span class="cd-timeline__date">27/03</span>
+            <span class="cd-timeline__date">    27/03</span>
           </div>
           <!-- cd-timeline__content -->
         </div>
@@ -142,7 +142,7 @@
             <h2>RoadSec</h2>
             <p>Realizado no <a href="http://tce.pb.gov.br/" target="_blank">Tribunal de Contas do Estado da Paraíba</a> durante o <a href="http://roadsec.com.br/joaopessoa2018/" target="_blank"><i>RoadSec João Pessoa 2018.</i></a></p>
             <img src="img/roadseccollage.jpg">
-            <span class="cd-timeline__date">24/02</span>
+            <span class="cd-timeline__date">    24/02</span>
           </div>
           <!-- cd-timeline__content -->
         </div>
