--- a/mapa.html
+++ b/mapa.html
@@ -12,10 +12,7 @@
 </head>
 <body >
     <div class="box">
-        <img class="img-responsive" src="./img/dotnetbrand.jpg" width="100%;" height="100%"/>
-        <div class="img-title">
-            <h1 class="display-4">Mapa interno da FPB a ser compartilhado até 15/06/2018.</h1>
-        </div>
+        <img class="img-responsive" src="./img/mapa.jpg" width="100%;" height="100%"/>
     </div>
 </body>
 </html>
