--- a/mapa.html
+++ b/mapa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Mapa</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
 </head>
 <body >
     <div class="box">
-        <img class="img-responsive" src="./img/mapa.jpg" width="100%;" height="100%"/>
+        <img class="img-responsive" src="./img/Mapa.jpg" width="100%;" height="100%"/>
     </div>
 </body>
 </html>
