--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>Alguns dos nossos participantes toparam fazer um pequeno video de apresentação, conheça eles acessando os links do youtube abaixo. Queremos ver o seu também em breve.
           <BR>
             <ul>
-                <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9an2bOrHi4107cJCANBnVbxs"  target="_blank">Get to know .NET_PB people, 1a temporada</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9an2bOrHi4107cJCANBnVbxs"  target="_blank">Get to know .NET_PB people, 1a temporada </a> <small>(<a href="/timeline.html">draft</a>)</small> </li>
                 <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9amgJZ0nXGAHFfcGr8UKxvR2"  target="_blank">Get to know .NET_PB people, 2a temporada</a></li>
               </ul>          
         </p>
