Adicionado atalho para 3a temporada da série GET TO KNOW .NET_PB PEOPLE

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <ul>
                 <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9an2bOrHi4107cJCANBnVbxs"  target="_blank">Get to know .NET_PB people, 1a temporada </a> <small>(<a href="/getToKnowDotNetPeopleEpisodesListView.html">draft</a>)</small> </li>
                 <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9amgJZ0nXGAHFfcGr8UKxvR2"  target="_blank">Get to know .NET_PB people, 2a temporada</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PL6y--OYch9andAySHStrx_c-mqBYP3wAo"  target="_blank">Get to know .NET_PB people, 3a temporada</a></li>
               </ul>          
         </p>
 
