Atualizei nome das imagens para correta exibição via GIT PAGES

--- a/getToKnowDotNetPeopleEpisodesListView.html
+++ b/getToKnowDotNetPeopleEpisodesListView.html
@@ -126,31 +126,31 @@
 <div class="col-12 col-sm-5 col-md-4 col-lg-3 col-xl-2 movie-tile text-center" 
     data-movie-title="Abraão Honório"
     data-trailer-youtube-id="PWLVkNhBhQ8" data-toggle="modal" data-target="#trailer">
-    <img  src="./img/getToKnow/abraao_honorio.jpg" width="180" height="279">
+    <img  src="./img/getToKnow/abraao_honorio.JPG" width="180" height="279">
 </div>
 
 <div class="col-12 col-sm-5 col-md-4 col-lg-3 col-xl-2 movie-tile text-center" 
     data-movie-title="Flaviano Flauber"
     data-trailer-youtube-id="2WjZu5oqgEc" data-toggle="modal" data-target="#trailer">
-    <img  src="./img/getToKnow/flaviano_flauber.jpg" width="180" height="279">
+    <img  src="./img/getToKnow/flaviano_flauber.JPG" width="180" height="279">
 </div>
 
 <div class="col-12 col-sm-5 col-md-4 col-lg-3 col-xl-2 movie-tile text-center" 
     data-movie-title="Joffily Ferreira"
     data-trailer-youtube-id="xCKzJWsef3M" data-toggle="modal" data-target="#trailer">
-    <img  src="./img/getToKnow/joffily_ferreira.jpg" width="180" height="279">
+    <img  src="./img/getToKnow/joffily_ferreira.JPG" width="180" height="279">
 </div>
 
 <div class="col-12 col-sm-5 col-md-4 col-lg-3 col-xl-2 movie-tile text-center" 
     data-movie-title="Hugo Dantas"
     data-trailer-youtube-id="ErSgzzVgTt0" data-toggle="modal" data-target="#trailer">
-    <img  src="./img/getToKnow/hugo_dantas.jpg" width="180" height="279">
+    <img  src="./img/getToKnow/hugo_dantas.JPG" width="180" height="279">
 </div>
 
 <div class="col-12 col-sm-5 col-md-4 col-lg-3 col-xl-2 movie-tile text-center" 
     data-movie-title="Rafael Ferreira"
     data-trailer-youtube-id="rDSVlGBRZaw" data-toggle="modal" data-target="#trailer">
-    <img  src="./img/getToKnow/rafael_ferreira.jpg" width="180" height="279">
+    <img  src="./img/getToKnow/rafael_ferreira.JPG" width="180" height="279">
 </div>
 
 <div class="col-12 col-sm-5 col-md-4 col-lg-3 col-xl-2 movie-tile text-center" 
